--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Paul Williamson</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/paul2.jpg" alt="Profile Picture" /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/Paul2.jpg" alt="Profile Picture" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -54,7 +54,7 @@
                     <p class="lead mb-5">Formely working as a Networks and Events Manager for a professional membership body, I am now working towards an MSc in Data Science with ambitions to move into a data analysis role. Work experience and internships are very welcome!</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/paul-williamson-633041144/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://paul-williamson-90.github.io/"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://paul-williamson-90.github.io/Paul-Williamson-90/"><i class="fab fa-github"></i></a>
                         <!-- <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a> -->
                         <!-- <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a> -->
                     </div>
