--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-
+                       
+			    <div class="flex-grow-1">
                             <h3 class="mb-0">Birkbeck, University of London</h3>
                             <div class="subheading mb-3">Master of Science</div>
                             <div><b>Data Science</b></div>
@@ -148,7 +148,9 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">October 2021 - July 2022</span></div>
                     </div>
+ <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
 
+			    <div class="flex-grow-1">
                             <h3 class="mb-0">University of Greenwich</h3>
                             <div class="subheading mb-3">Master of Arts</div>
                             <div><b>International Events Management</b></div>
@@ -156,7 +158,6 @@
 			    <p><b>Award:</b> Merit with distinction</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2016 - July 2017</span></div>
-                    </div>
                 </div>
             </section>
 
